--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <a href="/" class="flex flex-shrink-0 items-center">
                 <img class="w-10 h-10 block lg:hidden" src="./image/logo.svg" alt="logo">
                 <img class="w-10 h-10 hidden lg:block" src="./image/logo.svg" alt="logo">
-                <h2 class="text-2xl font-bold text-green-400 pl-2 uppercase">espo</h2>
+                <h2 class="text-2xl font-bold text-green-400 pl-2 uppercase">espo<span class="text-orange-500">20</span></h2>
               </a>
               <div class="hidden sm:ml-6 sm:block">
                 <div class="flex space-x-4">
@@ -305,7 +305,7 @@
           </div>
         </div>
     </div>
-    <footer class="flex justify-center items-center font-bold text-2xl w-full h-10 bg-gray-900 text-green-400 uppercase"><span>©</span>espo</footer>
+    <footer class="flex justify-center items-center font-bold text-2xl w-full h-10 bg-gray-900 text-green-400 uppercase"><span>©</span>espo<span class="text-orange-500">20</span></footer>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./store.js"></script>
 </body>
